--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,8 @@ jobs:
           pip3 install sphinx-rtd-theme
 
       - name: Install dependencies
-        run: python3 -m pip install -r ./requirements.txt
+        run: |
+          python3 -m pip install -r ./requirements.txt
           pip3 install git+https://github.com/bacelii/python_tools.git
 
       - name: Build docs
