--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ networkx>=2.5
 numpy>=1.19.5
 pandas>=1.1.5
 pykdtree>=1.3.1
-python_tools>=0.0.1
 scipy>=1.5.4
 seaborn>=0.11.2
 ipython
 ipython_genutils
+python_tools @ git+https://git@github.com/bacelii/python_tools.git
