--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install -r ./requirements.txt
-          pip3 install git+https://github.com/bacelii/python_tools.git
+          python3 -m pip install --use-deprecated=legacy-resolver  -r ./requirements.txt
+          #pip3 install git+https://github.com/bacelii/python_tools.git
 
       - name: Build docs
         run: |
