changed named of python_tools to datasci_tools

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ scipy>=1.5.4
 seaborn>=0.11.2
 ipython
 ipython_genutils
-python_tools @ git+https://git@github.com/bacelii/python_tools.git
+datasci_tools @ git+https://git@github.com/bacelii/datasci_tools.git
