--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ scipy>=1.5.4
 seaborn>=0.11.2
 ipython
 ipython_genutils
-datasci_tools @ git+https://git@github.com/bacelii/datasci_tools.git
+datasci-stdlib-tools>=1.0.0
