--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,6 +34,16 @@ jobs:
           python3 -m pip install  -r ./requirements.txt
           #pip3 install git+https://github.com/bacelii/datasci_tools.git
 
+      - name: Add any new modules
+        run: |
+          # --- to make the repository lowercase ---
+          REPO_URL=$(git config --get remote.origin.url)
+          REPO_NAME=$(basename -s .git $REPO_URL)
+          REPO_NAME=$(echo "$REPO_NAME" | tr '[:upper:]' '[:lower:]')
+          echo $REPO_NAME
+          rm docs/$REPO_NAME.rst
+          sphinx-apidoc -o docs $REPO_NAME/
+
       - name: Build docs
         run: |
           cd docs
